@@ -1,0 +1,79 @@
+-- DB/Creature: Add: Missing spawns for Amphitheater of Anguish | by malcrom
+-- Fix The Amphitheater of Anguish Spawning
+SET @GUID := 125601; --  40 required
+DELETE FROM `creature` WHERE `id`IN (30193,30102);
+DELETE FROM `creature` WHERE `guid` BETWEEN @GUID AND @GUID+39;
+INSERT INTO `creature` (`guid`, `id`, `map`, `spawnMask`, `phaseMask`, `modelid`, `equipment_id`, `position_x`, `position_y`, `position_z`, `orientation`, `spawntimesecs`, `spawndist`, `currentwaypoint`, `curhealth`, `curmana`, `MovementType`, `npcflag`, `unit_flags`, `dynamicflags`) VALUES
+-- Invisible Stalker
+(@GUID+0,15214,571,1,1,0,0,5729.15 ,-3015.369,296.5512,4.607669,120,0,0,1,0,0,0,0,0),
+(@GUID+1,15214,571,1,1,0,0,5818.867,-2976.993,290.2759,2.495821,120,0,0,1,0,0,0,0,0),
+(@GUID+2,15214,571,1,1,0,0,5743.459,-3012.192,290.7671,2.565634,120,0,0,1,0,0,0,0,0),
+(@GUID+3,15214,571,1,1,0,0,5740.554,-3009.175,290.2759,0.296706,120,0,0,1,0,0,0,0,0),
+(@GUID+4,15214,571,1,1,0,0,5791.739,-3015.988,286.5712,1.605703,120,0,0,1,0,0,0,0,0),
+(@GUID+5,15214,571,1,1,0,0,5816.957,-2972.925,290.2759,3.333579,120,0,0,1,0,0,0,0,0),
+(@GUID+6,15214,571,1,1,0,0,5796.063,-3015.993,286.6147,4.974188,120,0,0,1,0,0,0,0,0),
+(@GUID+7,15214,571,1,1,0,0,5824.51 ,-2955.568,296.551,0.9948376,120,0,0,1,0,0,0,0,0),
+-- Amphitheater Spectator
+(@GUID+8,30102,571,1,1,0,0,5723.329,-3040.881,303.6286,0.3316126,120,0,0,1,0,0,0,0,0),
+(@GUID+9,30102,571,1,1,0,0,5691.038,-2993.651,307.4399,0.05358058,120,0,0,1,0,0,0,0,0),
+(@GUID+10,30102,571,1,1,0,0,5697.557,-2985.958,303.6294,0.3316126,120,0,0,1,0,0,0,0,0),
+(@GUID+11,30102,571,1,1,0,0,5732.329,-3059.191,303.6294,0.541052,120,0,0,1,0,0,0,0,0),
+(@GUID+12,30102,571,1,1,0,0,5735.703,-3037.584,296.5507,0.5585054,120,0,0,1,0,0,0,0,0),
+(@GUID+13,30102,571,1,1,0,0,5849.702,-2984.776,300.2807,3.089233,120,0,0,1,0,0,0,0,0),
+(@GUID+14,30102,571,1,1,0,0,5862.831,-2978.309,307.4399,3.071779,120,0,0,1,0,0,0,0,0),
+(@GUID+15,30102,571,1,1,0,0,5826.039,-2935.936,300.2697,3.647738,120,0,0,1,0,0,0,0,0),
+(@GUID+16,30102,571,1,1,0,0,5691.663,-2974.02,303.6294,0.122173,120,0,0,1,0,0,0,0,0),
+(@GUID+17,30102,571,1,1,0,0,5823.243,-2895.698,307.4401,3.979351,120,0,0,1,0,0,0,0,0),
+(@GUID+18,30102,571,1,1,0,0,5824.486,-2917.669,303.6294,4.122175,120,0,0,1,0,0,0,0,0),
+(@GUID+19,30102,571,1,1,0,0,5801.149,-2895.24,303.6294,4.537856,120,0,0,1,0,0,0,0,0),
+(@GUID+20,30102,571,1,1,0,0,5814.957,-2911.626,300.2807,4.253134,120,0,0,1,0,0,0,0,0),
+(@GUID+21,30102,571,1,1,0,0,5821.17,-2911.49,303.6294,3.787364,120,0,0,1,0,0,0,0,0),
+(@GUID+22,30102,571,1,1,0,0,5790.656,-2901.042,300.2807,4.939282,120,0,0,1,0,0,0,0,0),
+-- Amphitheater Spectator
+(@GUID+23,30193,571,1,1,0,0,5716.436,-3047.592,307.4399,0.3490658,120,0,0,1,0,0,0,0,0),
+(@GUID+24,30193,571,1,1,0,0,5730.827,-3041.423,300.2801,0.4886922,120,0,0,1,0,0,0,0,0),
+(@GUID+25,30193,571,1,1,0,0,5704.682,-2986.659,300.2743,0.3665192,120,0,0,1,0,0,0,0,0),
+(@GUID+26,30193,571,1,1,0,0,5705.174,-2973.334,296.5504,0.1396263,120,0,0,1,0,0,0,0,0),
+(@GUID+27,30193,571,1,1,0,0,5722.959,-3059.555,307.44,0.541052,120,0,0,1,0,0,0,0,0),
+(@GUID+28,30193,571,1,1,0,0,5841.792,-2986.62,296.5501,3.179028,120,0,0,1,0,0,0,0,0),
+(@GUID+29,30193,571,1,1,0,0,5855.139,-2997.216,300.2807,3.700098,120,0,0,1,0,0,0,0,0),
+(@GUID+30,30193,571,1,1,0,0,5742.438,-3050.167,296.5508,0.5235988,120,0,0,1,0,0,0,0,0),
+(@GUID+31,30193,571,1,1,0,0,5865.154,-3003.392,303.6294,3.124139,120,0,0,1,0,0,0,0,0),
+(@GUID+32,30193,571,1,1,0,0,5856.421,-2985.136,303.6294,3.089233,120,0,0,1,0,0,0,0,0),
+(@GUID+33,30193,571,1,1,0,0,5868.514,-2990.317,307.44,3.127902,120,0,0,1,0,0,0,0,0),
+(@GUID+34,30193,571,1,1,0,0,5696.096,-2968.275,300.2807,0.03490658,120,0,0,1,0,0,0,0,0),
+(@GUID+35,30193,571,1,1,0,0,5715.793,-2945.014,296.5512,5.462881,120,0,0,1,0,0,0,0,0),
+(@GUID+36,30193,571,1,1,0,0,5810.117,-2898.158,303.6294,4.359755,120,0,0,1,0,0,0,0,0),
+(@GUID+37,30193,571,1,1,0,0,5836.928,-2924.024,307.4398,3.965052,120,0,0,1,0,0,0,0,0),
+-- Amphitheater Vendor
+(@GUID+38,30098,571,1,1,0,0,5691.513,-3001.708,307.3175,1.629701,120,0,0,1,0,0,0,0,0),
+(@GUID+39,30098,571,1,1,0,0,5834.321,-2966.102,296.4593,1.962511,120,0,0,1,0,0,0,0,0);
+
+SET @GUID := 13; --  2 required
+DELETE FROM `creature` WHERE `guid` IN (@GUID,@GUID+1);
+INSERT INTO `creature` (`guid`, `id`, `map`, `spawnMask`, `phaseMask`, `modelid`, `equipment_id`, `position_x`, `position_y`, `position_z`, `orientation`, `spawntimesecs`, `spawndist`, `currentwaypoint`, `curhealth`, `curmana`, `MovementType`, `npcflag`, `unit_flags`, `dynamicflags`) VALUES
+-- Zena <Wodin's Warrior Kitten>
+(@GUID+0,30140,571,1,1,0,0,5791.278,-3021.8,286.468,4.550161,120,5,0,1,0,1,0,0,0),
+-- [DND] Anguish Spectator Bunny
+(@GUID+1,30156,571,1,1,0,0,5776.664,-2989.059,278.9828,0.4014257,120,0,0,1,0,0,0,0,0);
+
+-- Update [DND] Anguish Spectator Bunny
+UPDATE `creature_template` SET `InhabitType`=4, `flags_extra`=128 WHERE `entry`=30156;
+-- Update Wodin the Troll-Servant
+UPDATE `creature` SET `modelid`=12829, `orientation`=1.832596 WHERE `guid`=200821;
+UPDATE `creature_template_addon` SET `bytes1`=0, `bytes2`=1 WHERE `entry`=30009;
+-- Update Gurgthock <Fight Promoter>
+UPDATE `creature` SET `orientation`=2.024582 WHERE `guid`=200822;
+UPDATE `creature_template_addon` SET `path_id`=0, `mount`=26755, `bytes1`=0, `bytes2`=1 WHERE `entry`=30007;
+-- Invisible Stalker
+UPDATE `creature` SET `modelid`=0 WHERE `id`=15214;
+
+-- Add Missing go's
+SET @OGUID := 7093; -- 5 required
+DELETE FROM `gameobject` WHERE `map`=571 AND `id` IN (192238,192614,192615,192237,192240);
+INSERT INTO `gameobject` (`guid`,`id`,`map`,`spawnMask`,`phaseMask`,`position_x`,`position_y`,`position_z`,`orientation`,`rotation0`,`rotation1`,`rotation2`,`rotation3`,`spawntimesecs`,`animprogress`,`state`) VALUES 
+(@OGUID+0,192238,571,1,1,5784.361,-3105.425,326.7856,0.4450589,0,0,0.2206974,0.9753423,120,0,1),
+(@OGUID+1,192614,571,1,1,5850.665,-3038.08,307.9219,2.015852,0,0,0.845727,0.5336158,120,0,1),
+(@OGUID+2,192615,571,1,1,5770.064,-3076.525,307.9219,2.015852,0,0,0.845727,0.5336158,120,0,1),
+(@OGUID+3,192237,571,1,1,5865.14,-3066.895,326.8948,0.4450589,0,0,0.2206974,0.9753423,120,0,1),
+(@OGUID+4,192240,571,1,1,5827.597,-3123.574,345.3081,-1.125737,0,0,-0.5336142,0.845728,120,0,1);
