@@ -1,0 +1,159 @@
+-- DB/Waypoints: Add: Waypoints for two Amphitheater Vendors (30098) | by malcrom
+-- Pathing for Amphitheater Vendor Entry: 30098
+SET @NPC := 125639;
+SET @PATH := @NPC * 10;
+UPDATE `creature` SET `spawndist`=0,`MovementType`=2,`position_x`=5714.727,`position_y`=-2993.386,`position_z`=296.461 WHERE `guid`=@NPC;
+DELETE FROM `creature_addon` WHERE `guid`=@NPC;
+INSERT INTO `creature_addon` (`guid`,`path_id`,`bytes2`,`mount`,`auras`) VALUES (@NPC,@PATH,1,0, '56094');
+DELETE FROM `waypoint_data` WHERE `id`=@PATH;
+INSERT INTO `waypoint_data` (`id`,`point`,`position_x`,`position_y`,`position_z`,`delay`,`move_flag`,`action`,`action_chance`,`wpguid`,`orientation`) VALUES
+(@PATH,1,5714.727,-2993.386,296.461,6000,0,0,100,0,2.04084),
+(@PATH,2,5714.554,-2992.06,296.4618,0,0,0,100,0,0),
+(@PATH,3,5711.305,-2988.808,296.4676,0,0,0,100,0,0),
+(@PATH,4,5705.161,-2981.065,296.4691,0,0,0,100,0,0),
+(@PATH,5,5700.827,-2970.708,296.4702,0,0,0,100,0,0),
+(@PATH,6,5696.297,-2957.711,296.4715,0,0,0,100,0,0),
+(@PATH,7,5696.799,-2955.088,296.4714,0,0,0,100,0,0),
+(@PATH,8,5697.822,-2953.404,296.4712,6000,0,0,100,0,0),
+(@PATH,9,5695.771,-2953.885,296.4716,0,0,0,100,0,0),
+(@PATH,10,5696.042,-2961.384,296.4715,0,0,0,100,0,0),
+(@PATH,11,5702.383,-2974.2,296.4698,0,0,0,100,0,0),
+(@PATH,12,5707.034,-2983.82,296.4686,0,0,0,100,0,0),
+(@PATH,13,5713.569,-2990.567,296.4613,0,0,0,100,0,0),
+(@PATH,14,5712.346,-2989.936,296.4673,6000,0,0,100,0,0),
+(@PATH,15,5714.215,-2991.943,296.4613,0,0,0,100,0,0),
+(@PATH,16,5717.194,-2999.773,296.4234,0,0,0,100,0,0),
+(@PATH,17,5728.412,-3022.169,296.4291,0,0,0,100,0,0),
+(@PATH,18,5730.965,-3027.998,296.45895,0,0,0,100,0,0),
+(@PATH,19,5708.885,-3039.621,307.3123,0,0,0,100,0,0),
+(@PATH,20,5711.497,-3040.242,307.3558,6000,0,0,100,0,0),
+(@PATH,21,5711.84,-3044.363,307.3188,0,0,0,100,0,0),
+(@PATH,22,5716.811,-3055.433,307.3327,0,0,0,100,0,0),
+(@PATH,23,5721.602,-3063.456,307.36,0,0,0,100,0,0),
+(@PATH,24,5725.222,-3067.889,307.3367,0,0,0,100,0,0),
+(@PATH,25,5725.133,-3070.596,307.3248,0,0,0,100,0,0),
+(@PATH,26,5719.292,-3073.477,311.0657,0,0,0,100,0,0),
+(@PATH,27,5713.645,-3075.998,312.6586,6000,0,0,100,0,0),
+(@PATH,28,5714.134,-3075.827,312.6587,0,0,0,100,0,0),
+(@PATH,29,5720.383,-3072.84,310.5493,0,0,0,100,0,0),
+(@PATH,30,5725.57,-3070.224,307.3301,0,0,0,100,0,0),
+(@PATH,31,5723.997,-3066.298,307.3327,0,0,0,100,0,0),
+(@PATH,32,5720.401,-3061.947,307.3509,0,0,0,100,0,0),
+(@PATH,33,5716.573,-3055.332,307.33,0,0,0,100,0,0),
+(@PATH,34,5713.17,-3048.396,307.3137,0,0,0,100,0,0),
+(@PATH,35,5708.885,-3039.621,307.3123,0,0,0,100,0,0),
+(@PATH,36,5710.52,-3038.915,307.3293,6000,0,0,100,0,0),
+(@PATH,37,5730.965,-3027.998,296.45895,0,0,0,100,0,0),
+(@PATH,38,5732.765,-3031.719,296.4664,0,0,0,100,0,0),
+(@PATH,39,5732.112,-3034.138,296.4667,6000,0,0,100,0,0),
+(@PATH,40,5733.084,-3031.317,296.4664,0,0,0,100,0,0),
+(@PATH,41,5730.009,-3025.079,296.4313,0,0,0,100,0,0),
+(@PATH,42,5725.542,-3017.257,296.4236,0,0,0,100,0,0),
+(@PATH,43,5717.127,-2999.863,296.4223,0,0,0,100,0,0),
+(@PATH,44,5714.964,-2994.664,296.4603,0,0,0,100,0,0),
+(@PATH,45,5692.41,-3004.103,307.3565,6000,0,0,100,0,0.1291), 
+(@PATH,46,5691.513,-3001.708,307.3175,0,0,0,100,0,0),
+(@PATH,47,5688.313,-2996.178,307.3124,0,0,0,100,0,0),
+(@PATH,48,5684.693,-2989.563,307.3086,0,0,0,100,0,0),
+(@PATH,49,5677.367,-2974.369,307.3082,0,0,0,100,0,0),
+(@PATH,50,5674.822,-2968.894,307.309,0,0,0,100,0,0),
+(@PATH,51,5678.438,-2968.422,307.3421,6000,0,0,100,0,0),
+(@PATH,52,5676.909,-2970.624,307.3198,0,0,0,100,0,0),
+(@PATH,53,5678.826,-2977.606,307.3074,0,0,0,100,0,0),
+(@PATH,54,5685.183,-2989.712,307.3122,0,0,0,100,0,0),
+(@PATH,55,5692.096,-3002.872,307.3178,0,0,0,100,0,0),
+(@PATH,56,5693.071,-3001.71,307.3307,6000,0,0,100,0,0),
+(@PATH,57,5694.927,-3003.501,307.34024,0,0,0,100,0,0),
+(@PATH,58,5714.964,-2994.664,296.4603,0,0,0,100,0,0);
+-- 0xF130007592007A8C .go 5714.727 -2993.386 296.461
+
+-- Pathing for Amphitheater Vendor Entry: 30098
+SET @NPC := 125640;
+SET @PATH := @NPC * 10;
+UPDATE `creature` SET `spawndist`=0,`MovementType`=2,`position_x`=5815.197,`position_y`=-2890.652,`position_z`=307.3073 WHERE `guid`=@NPC;
+DELETE FROM `creature_addon` WHERE `guid`=@NPC;
+INSERT INTO `creature_addon` (`guid`,`path_id`,`bytes2`,`mount`,`auras`) VALUES (@NPC,@PATH,1,0, '56094');
+DELETE FROM `waypoint_data` WHERE `id`=@PATH;
+INSERT INTO `waypoint_data` (`id`,`point`,`position_x`,`position_y`,`position_z`,`delay`,`move_flag`,`action`,`action_chance`,`wpguid`,`orientation`) VALUES
+(@PATH,1,5815.197,-2890.652,307.3073,0,0,0,100,0,0),
+(@PATH,2,5794.252,-2883.318,307.3083,0,0,0,100,0,0),
+(@PATH,3,5788.011,-2882.464,307.3129,0,0,0,100,0,0),
+(@PATH,4,5777.774,-2887.472,307.314,6000,0,0,100,0,5.081746),
+(@PATH,5,5781.212,-2885.993,307.3153,0,0,0,100,0,0),
+(@PATH,6,5790.22,-2882.968,307.3221,0,0,0,100,0,0),
+(@PATH,7,5812.069,-2889.932,307.3122,0,0,0,100,0,0),
+(@PATH,8,5824.013,-2894.033,307.3106,0,0,0,100,0,0),
+(@PATH,9,5832.72,-2904.214,307.3027,0,0,0,100,0,0),
+(@PATH,10,5839.131,-2917.173,307.3007,0,0,0,100,0,0),
+(@PATH,11,5842.978,-2932.468,307.3301,6000,0,0,100,0,3.49564),
+(@PATH,12,5823.141,-2942.902,296.4594,0,0,0,100,0,0),
+(@PATH,13,5820.456,-2941.357,296.463,0,0,0,100,0,0),
+(@PATH,14,5818.377,-2934.065,296.4635,0,0,0,100,0,0),
+(@PATH,15,5815.375,-2925.807,296.4646,0,0,0,100,0,0),
+(@PATH,16,5810.773,-2915.595,296.4659,0,0,0,100,0,0),
+(@PATH,17,5806.843,-2906.805,296.467,0,0,0,100,0,0),
+(@PATH,18,5803.637,-2903.886,296.4672,0,0,0,100,0,0),
+(@PATH,19,5793.222,-2907.475,296.4679,0,0,0,100,0,0),
+(@PATH,20,5789.824,-2907.318,296.4679,0,0,0,100,0,0),
+(@PATH,21,5793.065,-2905.667,296.4679,6000,0,0,100,0,0),
+(@PATH,22,5802.28,-2903.771,296.467,0,0,0,100,0,0),
+(@PATH,23,5805.051,-2905.157,296.4671,0,0,0,100,0,0),
+(@PATH,24,5811.012,-2917.848,296.4655,0,0,0,100,0,0),
+(@PATH,25,5816.104,-2930.128,296.4639,0,0,0,100,0,0),
+(@PATH,26,5819.828,-2938.419,296.463,0,0,0,100,0,0),
+(@PATH,27,5823.147,-2946.686,296.4627,0,0,0,100,0,0),
+(@PATH,28,5826.026,-2950.458,296.4608,6000,0,0,100,0,0),
+(@PATH,29,5836.404,-2972.255,296.4608,0,0,0,100,0,0),
+(@PATH,30,5838.149,-2976.351,296.4612,0,0,0,100,0,0),
+(@PATH,31,5859.727,-2966.575,307.32678,0,0,0,100,0,0),
+(@PATH,32,5861.81,-2971.323,307.3561,0,0,0,100,0,0),
+(@PATH,33,5863.061,-2972.167,307.3237,0,0,0,100,0,0),
+(@PATH,34,5866.722,-2976.944,307.311,0,0,0,100,0,0),
+(@PATH,35,5871.775,-2988.365,307.3141,0,0,0,100,0,0),
+(@PATH,36,5872.965,-2994.138,307.3567,0,0,0,100,0,0),
+(@PATH,37,5874.925,-2998.613,307.3567,0,0,0,100,0,0),
+(@PATH,38,5880.139,-2996.332,310.5986,0,0,0,100,0,0),
+(@PATH,39,5887.151,-2993.677,312.6583,0,0,0,100,0,0),
+(@PATH,40,5889.792,-2992.4,312.6583,0,0,0,100,0,0),
+(@PATH,41,5885.894,-2993.681,312.6583,6000,0,0,100,0,0),
+(@PATH,42,5880.026,-2996.398,310.5436,0,0,0,100,0,0),
+(@PATH,43,5874.923,-2998.589,307.3567,0,0,0,100,0,0),
+(@PATH,44,5872.593,-2994.324,307.3567,0,0,0,100,0,0),
+(@PATH,45,5866.108,-2975.193,307.3089,0,0,0,100,0,0),
+(@PATH,46,5863.831,-2970.042,307.3072,0,0,0,100,0,0),
+(@PATH,47,5862.619,-2971.012,307.3227,0,0,0,100,0,0),
+(@PATH,48,5859.727,-2966.575,307.32678,6000,0,0,100,0,0),
+(@PATH,49,5838.149,-2976.351,296.4612,0,0,0,100,0,0),
+(@PATH,50,5840.075,-2980.193,296.4609,0,0,0,100,0,0),
+(@PATH,51,5841.883,-2981.336,296.4596,0,0,0,100,0,0),
+(@PATH,52,5845.005,-2984.348,296.4602,0,0,0,100,0,0),
+(@PATH,53,5847.249,-2989.125,296.461,0,0,0,100,0,0),
+(@PATH,54,5850.176,-2994.417,296.4619,0,0,0,100,0,0),
+(@PATH,55,5854.216,-3003.275,296.4633,0,0,0,100,0,0),
+(@PATH,56,5857.905,-3012.948,296.4679,0,0,0,100,0,0),
+(@PATH,57,5855.694,-3012.666,296.4679,6000,0,0,100,0,0),
+(@PATH,58,5856.008,-3008.202,296.4679,0,0,0,100,0,0),
+(@PATH,59,5852.001,-2999.263,296.4626,0,0,0,100,0,0),
+(@PATH,60,5846.733,-2987.699,296.4607,0,0,0,100,0,0),
+(@PATH,61,5841.884,-2981.688,296.4596,0,0,0,100,0,0),
+(@PATH,62,5839.803,-2981.84,296.4595,6000,0,0,100,0,0),
+(@PATH,63,5838.802,-2979.086,296.464,0,0,0,100,0,0),
+(@PATH,64,5837.438,-2973.646,296.4601,0,0,0,100,0,0),
+(@PATH,65,5834.321,-2966.102,296.4593,0,0,0,100,0,0),
+(@PATH,66,5827.733,-2952.834,296.4597,0,0,0,100,0,0),
+(@PATH,67,5824.319,-2947.607,296.4614,0,0,0,100,0,0),
+(@PATH,68,5824.185,-2944.959,296.4594,0,0,0,100,0,0),
+(@PATH,69,5823.141,-2942.902,296.4594,0,0,0,100,0,0),
+(@PATH,70,5842.978,-2932.468,307.3301,0,0,0,100,0,0),
+(@PATH,71,5842.981,-2931.031,307.3559,6000,0,0,100,0,2.07934),
+(@PATH,72,5842.807,-2925.778,307.3042,0,0,0,100,0,0),
+(@PATH,73,5836.683,-2912.875,307.3041,0,0,0,100,0,0),
+(@PATH,74,5832.72,-2904.214,307.3027,0,0,0,100,0,0),
+(@PATH,75,5824.013,-2894.033,307.3106,0,0,0,100,0,0);
+-- 0xF130007592006C29 .go 5815.197 -2890.652 307.3073
+
+-- Remove unneeded spawn
+DELETE FROM `creature` WHERE `guid`=109649;
+DELETE FROM `creature_addon` WHERE `guid`=109649;
+
+UPDATE `version` SET `db_version` = 'EDB 1.060' WHERE `core_version` = 'EchoCore';
